<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="178dp"
            android:layout_height="102dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:onClick="imageview_refresher"
            android:contentDescription="NGSI_LOGO"
            app:srcCompat="@drawable/ngsi_logo" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Blue"
                android:text="@string/numOfPending"/>
            <TextView
                android:id="@+id/txt_noOfPending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Green"
                android:text="@string/numOfComplete"/>
            <TextView
                android:id="@+id/txt_noOfComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_informNoData"
                android:layout_width="match_parent"
                android:layout_height="273dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="invisible"
                android:text="@string/noData"
                android:textSize="20sp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:scrollbars="vertical"
                android:scrollbarFadeDuration="0"
                android:layout_width="match_parent"
                android:layout_height="273dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:visibility="visible" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/darker_gray"/>
        <Button
            android:id="@+id/btn_transaction"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="btn_transaction_click"
            android:visibility="gone"
            android:text="@string/btn_transaction" />
        <Button
            android:id="@+id/btn_cheque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="btn_cheque_click"
            android:text="Refresh List" />
        <Button
            android:id="@+id/btn_myhistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="btnClickHistory"
            android:text="@string/myHistory" />
    </LinearLayout>
    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/Signout"
        android:onClick="btnClickLogOut"
        android:layout_alignParentBottom="true" />
</RelativeLayout>