<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
        <LinearLayout
            android:background="@drawable/custom_rectangle_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:weightSum="100">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/bank_reference_number"/>
                <TextView
                    android:id="@+id/txt_bankRefNo"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_weight="50"
                    android:text="@string/customPlaceholder"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:weightSum="100">
            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/username"/>
            <TextView
                android:id="@+id/txt_username"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="50"
                android:text="@string/customPlaceholder"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:weightSum="100">
            <TextView
                android:id="@+id/txt_email"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/mobile_number"/>
            <TextView
                android:id="@+id/txt_mobileNumber"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="50"
                android:text="@string/customPlaceholder"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:weightSum="100">
            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/amount"/>
            <TextView
                android:id="@+id/txt_amount"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="50"
                android:text="@string/customPlaceholder"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:weightSum="100">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/status"/>
                <TextView
                    android:id="@+id/txt_status"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_weight="50"
                    android:text="@string/customPlaceholder"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="15dp"/>
    </LinearLayout>
</RelativeLayout>