<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_cheque"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"/>
                <ImageView
                    android:id="@+id/img_depositslip"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:weightSum="100">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/bank_reference_number"/>
                    <EditText
                        android:id="@+id/et_bank_number"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="50"
                        android:hint="@string/customPlaceholder"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:weightSum="100">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/cheque_number"/>
                    <EditText
                        android:id="@+id/et_transaction_number"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="50"
                        android:hint="@string/customPlaceholder"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:weightSum="100">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/Name"/>
                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="50"
                        android:hint="@string/customPlaceholder"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:weightSum="100">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/Email"/>
                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="50"
                        android:hint="@string/customPlaceholder"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:weightSum="100">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/Contact"/>
                    <EditText
                        android:id="@+id/et_contact"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="50"
                        android:hint="@string/customPlaceholder"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:weightSum="100">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/amount"/>
                    <EditText
                        android:id="@+id/et_amount"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="50"
                        android:hint="@string/customPlaceholder"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:weightSum="100">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/dateTime"/>
                    <EditText
                        android:id="@+id/et_datetime"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="50"
                        android:hint="@string/customPlaceholder"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>